--- a/index.html
+++ b/index.html
@@ -1,48 +1,175 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme='light'>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- google font poppins -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+            "primary-color": '#E76F51',
+            "banner-bg": "rgba(231, 111, 81, 0.10)",
+
+          }
+        }
+      }
+    }
+  </script>
+
+  <style>
+    .font-poppins {
+      font-family: 'Poppins', sans-serif;
+    }
+  </style>
 </head>
-<body>
+
+<body class="font-poppins">
   <header>
-    <nav>
-      <div class="navbar bg-base-100">
-        <div class="navbar-start">
-          <div class="dropdown">
-            <label tabindex="0" class="btn btn-ghost lg:hidden">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
-              </svg>
-            </label>
-            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-              <li><a>Home</a></li>
-              <li><a>shop</a></li>
-              <li><a>News</a></li>
-              <li><a>Contact</a></li>
-            </ul>
-          </div>
-          <a class="btn btn-ghost normal-case text-xl">Biker Zone</a>
-        </div>
-        <div class="navbar-center hidden lg:flex">
-          <ul class="menu menu-horizontal px-1">
-            <li><a>Home</a></li>            
-            <li><a>shop</a></li>
-            <li><a>News</a></li>
-            <li><a>Contact</a></li>
+    <!-- navbar area -->
+    <nav class="sm:container sm:mx-auto">
+    <div class="navbar bg-base-100">
+      <div class="flex-1">
+        <div class="dropdown">
+          <label tabindex="0" class="btn btn-ghost lg:hidden">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+            </svg>
+          </label>
+          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+          <li><a>Home</a></li>
+          <li><a>Shop</a></li>
+          <li><a>About</a></li>
+          <li><a>Contact</a></li>
           </ul>
         </div>
-        <div class="navbar-end">
-          <a class="btn btn-error">login</a>
+        <a class="btn btn-ghost normal-case text-xl">daisyUI</a>
+      </div>
+      <div class="navbar-center hidden lg:flex">
+        <ul class="menu menu-horizontal px-1">
+          <li><a>Home</a></li>
+          <li><a>Shop</a></li>
+          <li><a>About</a></li>
+          <li><a>Contact</a></li>
+        </ul>
+      </div>
+      <div class="">
+        <a class="btn btn-error text-white">Button</a>
+      </div>
+    </div>
+    </nav>
+
+    <!-- banner area -->
+    <section class="container mx-auto">
+      <div class="carousel w-full bg-banner-bg h-[550px] items-center overflow-hidden">
+        <!-- slide1 -->
+        <div id="slide1" class="carousel-item relative w-full">
+
+          <div class="hero min-h-screen -200">
+            <div class="hero-content flex-col lg:flex-row-reverse">
+              <img src="/images/slider/bike1.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <div class="space-y-4">
+                <h1 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                <p class="py-6 font-thin sm:w-1/2">Amet minim mollit non deserunt ullamco
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                <button class="btn btn-error text-white">Purchase</button>
+              </div>
+            </div>
+          </div>
+
+
+
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide4" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <!-- slide2 -->
+        <div id="slide2" class="carousel-item relative w-full">
+          <div class="hero min-h-screen -200">
+            <div class="hero-content flex-col lg:flex-row-reverse">
+              <img src="/images/slider/bike2.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <div class="space-y-4">
+                <h1 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                <p class="py-6 font-thin sm:w-1/2">Amet minim mollit non deserunt ullamco
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                <button class="btn btn-error text-white">Purchase</button>
+              </div>
+            </div>
+          </div>
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide1" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <!-- slide3 -->
+        <div id="slide3" class="carousel-item relative w-full">
+          <div class="hero min-h-screen -200">
+            <div class="hero-content flex-col lg:flex-row-reverse">
+              <img src="/images/slider/bike3.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <div class="space-y-4">
+                <h1 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                <p class="py-6 font-thin sm:w-1/2">Amet minim mollit non deserunt ullamco
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                <button class="btn btn-error text-white">Purchase</button>
+              </div>
+            </div>
+          </div>
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide2" class="btn btn-circle">❮</a>
+            <a href="#slide4" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+        <!-- slide4 -->
+        <div id="slide4" class="carousel-item relative w-full">
+          <div class="hero min-h-screen -200">
+            <div class="hero-content flex-col lg:flex-row-reverse">
+              <img src="/images/slider/bike4.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <div class="space-y-4">
+                <h1 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
+                <p class="py-6 font-thin sm:w-1/2">Amet minim mollit non deserunt ullamco
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                <button class="btn btn-error text-white">Purchase</button>
+              </div>
+            </div>
+          </div>
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide3" class="btn btn-circle">❮</a>
+            <a href="#slide1" class="btn btn-circle">❯</a>
+          </div>
         </div>
       </div>
-    </nav>
+    </section>
   </header>
-  <main></main>
+  <main>
+    <!-- featured section -->
+    <section class="container mx-auto">
+      <div class="section-title text-center py-10">
+        <h2 class="font-semibold text-5xl">Fetured Bikes In This Year</h2>
+        <p class="text-sm relative text-red-400 ">Best bike collection
+          <span class="before:bg-red-400 before:w-16 before:h-px before:bottom- before:left-0  before:right-0 before:mx-auto
+            before:absolute before:block"></span>
+        </p>
+      </div>
+      <div class="single-feature grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 text-center gap-7">
+        <img class="w-full" src="images/others/feature-bike.png" alt="">
+        <img class="w-full" src="images/others/feature-bike.png" alt="">
+        <img class="w-full" src="images/others/feature-bike.png" alt="">
+      </div>
+    </section>
+  </main>
   <footer></footer>
-
 </body>
+
 </html>
