--- a/index.html
+++ b/index.html
@@ -168,6 +168,45 @@
         <img class="w-full" src="images/others/feature-bike.png" alt="">
       </div>
     </section>
+    <!-- latest area -->
+    <section  class="container mx-auto">
+      <div class="section-title text-center py-20">
+        <h2 class="font-semibold text-5xl">latest News</h2>        
+      </div>
+      <div class="single-news grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5">
+        <div class="card  bg-base-100 shadow-xl p-5">
+          <figure><img src="/images/others/latest2.png" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title">Motorcycles & Scooters</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <div class="card-actions ">
+              <button class="btn bg-white border border-red-400 text-red-500 hover:bg-red-500 hover:text-white ">Read More</button>
+            </div>
+          </div>
+        </div>
+        <div class="card  bg-base-100 shadow-xl p-5">
+          <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <div class="card-actions ">
+              <button class="btn bg-white border border-red-400 text-red-500 hover:bg-red-500 hover:text-white ">Read More</button>
+            </div>
+          </div>
+        </div>
+        <div class="card  bg-base-100 shadow-xl p-5">
+          <figure><img src="/images/others/latest3.png" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title">2021 Honda CBR500R</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <div class="card-actions ">
+              <button class="btn bg-white border border-red-400 text-red-500 hover:bg-red-500 hover:text-white ">Read More</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
   <footer></footer>
 </body>
