--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <!-- latest area -->
     <section class="container mx-auto">
       <div class="section-title text-center py-20">
-        <h2 class="font-semibold text-5xl">latest News</h2>
+        <h2 class="font-semibold text-5xl">Latest News</h2>
       </div>
       <div class="single-news grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5">
         <div class="card  bg-base-100 shadow-xl p-5">
@@ -339,7 +339,27 @@
       </div>
     </section>
   </main>
-  <footer></footer>
+  <!-- footer -->
+<section>
+  <footer class="footer p-10 bg-neutral text-neutral-content mt-10 w-full ">
+  
+    <div class="md:container md:mx-auto sm:flex justify-around items-center ">
+      <div class="">
+      
+        <p>Bike Zone Industries Ltd.<br />Providing reliable tech since 1992</p>
+      </div>
+      <div>
+        <span class="footer-title">Get the app</span>
+        <div class="grid grid-row gap-4">
+          <a><img class="w-32" src="images/others/android.png" alt=""></a>
+          <a><img class="w-32" src="images/others/ios.png" alt=""></a>
+      
+        </div>
+      </div>
+    </div>
+  
+  </footer>
+</section>
 </body>
 
 </html>
