--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
           <div class="hero min-h-screen -200">
             <div class="hero-content flex-col lg:flex-row-reverse">
-              <img src="/images/slider/bike1.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <img src="./images/slider/bike1.png" class="max-w-sm rounded-lg shadow-2xl" />
               <div class="space-y-4">
                 <h1 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
                 <p class="py-6 font-thin sm:w-1/2">Amet minim mollit non deserunt ullamco
@@ -100,7 +100,7 @@
         <div id="slide2" class="carousel-item relative w-full">
           <div class="hero min-h-screen -200">
             <div class="hero-content flex-col lg:flex-row-reverse">
-              <img src="/images/slider/bike2.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <img src="./images/slider/bike2.png" class="max-w-sm rounded-lg shadow-2xl" />
               <div class="space-y-4">
                 <h1 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
                 <p class="py-6 font-thin sm:w-1/2">Amet minim mollit non deserunt ullamco
@@ -118,7 +118,7 @@
         <div id="slide3" class="carousel-item relative w-full">
           <div class="hero min-h-screen -200">
             <div class="hero-content flex-col lg:flex-row-reverse">
-              <img src="/images/slider/bike3.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <img src="./images/slider/bike3.png" class="max-w-sm rounded-lg shadow-2xl" />
               <div class="space-y-4">
                 <h1 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
                 <p class="py-6 font-thin sm:w-1/2">Amet minim mollit non deserunt ullamco
@@ -136,7 +136,7 @@
         <div id="slide4" class="carousel-item relative w-full">
           <div class="hero min-h-screen -200">
             <div class="hero-content flex-col lg:flex-row-reverse">
-              <img src="/images/slider/bike4.png" class="max-w-sm rounded-lg shadow-2xl" />
+              <img src="./images/slider/bike4.png" class="max-w-sm rounded-lg shadow-2xl" />
               <div class="space-y-4">
                 <h1 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h1>
                 <p class="py-6 font-thin sm:w-1/2">Amet minim mollit non deserunt ullamco
@@ -176,7 +176,7 @@
       </div>
       <div class="single-news grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5">
         <div class="card  bg-base-100 shadow-xl p-5">
-          <figure><img src="/images/others/latest2.png" alt="Shoes" /></figure>
+          <figure><img src="./images/others/latest1.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title">Motorcycles & Scooters</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
@@ -188,7 +188,7 @@
           </div>
         </div>
         <div class="card  bg-base-100 shadow-xl p-5">
-          <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+          <figure><img src="./images/others/latest2.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title">Ducati XDIAVEL S-73</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
@@ -200,7 +200,7 @@
           </div>
         </div>
         <div class="card  bg-base-100 shadow-xl p-5">
-          <figure><img src="/images/others/latest3.png" alt="Shoes" /></figure>
+          <figure><img src="./images/others/latest3.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title">2021 Honda CBR500R</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
@@ -220,7 +220,7 @@
       </div>
       <div class="single-client grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-11">
         <div class="card card-compact bg-base-100 shadow-xl text-center space-y-4 p-9 border border-gray-400">
-          <figure><img class="w-40" src="/images/others/user-2.png" alt="Shoes" /></figure>
+          <figure><img class="w-40" src="./images/others/user-2.png" alt="Shoes" /></figure>
           <div class="card-body">
 
             <p>Slate helps you see how
@@ -239,7 +239,7 @@
           </div>
         </div>
         <div class="card card-compact bg-base-100 shadow-xl text-center space-y-4 p-9 border border-gray-400">
-          <figure><img class="w-40" src="/images/others/user-3.png" alt="Shoes" /></figure>
+          <figure><img class="w-40" src="./images/others/user-3.png" alt="Shoes" /></figure>
           <div class="card-body">
 
             <p>Slate helps you see how
@@ -259,7 +259,7 @@
         </div>
 
         <div class="card card-compact bg-base-100 shadow-xl text-center space-y-4 p-9 border border-gray-400">
-          <figure><img class="w-40" src="/images/others/user-1.png" alt="Shoes" /></figure>
+          <figure><img class="w-40" src="./images/others/user-1.png" alt="Shoes" /></figure>
           <div class="card-body">
 
             <p>Slate helps you see how
@@ -289,77 +289,85 @@
       </div>
       <div class="hero ">
         <div class="hero-content flex-col lg:flex-row gap-24">
-          <img src="/images/others/faq.png" class="max-w-sm rounded-lg shadow-2xl" />
+          <img src="./images/others/faq.png" class="max-w-sm rounded-lg shadow-2xl" />
           <div>
-          <div class="collapse collapse-arrow  mb-5 border border-gray-400 rounded-sm">
-            <input type="radio" name="my-accordion-2" checked="checked" />
-            <div class="collapse-title text-xl font-medium">
-              What are the most important things I should
-              know about riding a bike?
+            <div class="collapse collapse-arrow  mb-5 border border-gray-400 rounded-sm">
+              <input type="radio" name="my-accordion-2" checked="checked" />
+              <div class="collapse-title text-xl font-medium">
+                What are the most important things I should
+                know about riding a bike?
+              </div>
+              <div class="collapse-content">
+                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in
+                  the mindset of
+                  “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally
+                  compliant bike rider.</p>
+              </div>
             </div>
-            <div class="collapse-content">
-              <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of
-              “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</p>
+            <div class="collapse collapse-arrow  mb-5 border border-gray-400 rounded-sm ">
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title text-xl font-medium">
+                How can I tell if my helmet is old and I need a
+                new one?
+              </div>
+              <div class="collapse-content">
+                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in
+                  the mindset of
+                  “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally
+                  compliant bike rider.</p>
+              </div>
             </div>
-          </div>
-          <div class="collapse collapse-arrow  mb-5 border border-gray-400 rounded-sm ">
-            <input type="radio" name="my-accordion-2" />
-            <div class="collapse-title text-xl font-medium">
-              How can I tell if my helmet is old and I need a
-              new one?
+            <div class="collapse collapse-arrow mb-5 border border-gray-400 rounded-sm ">
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title text-xl font-medium">
+                How can I tell if my helmet is old and I need a
+                new one?
+              </div>
+              <div class="collapse-content">
+                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in
+                  the mindset of
+                  “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally
+                  compliant bike rider.</p>
+              </div>
             </div>
-            <div class="collapse-content">
-              <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of
-              “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</p>
+            <div class="collapse collapse-arrow mb-5 border border-gray-400 rounded-sm ">
+              <input type="radio" name="my-accordion-2" />
+              <div class="collapse-title text-xl font-medium">
+                What rules should I follow when riding my bike?
+              </div>
+              <div class="collapse-content">
+                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in
+                  the mindset of
+                  “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally
+                  compliant bike rider.</p>
+              </div>
             </div>
-          </div>
-          <div class="collapse collapse-arrow mb-5 border border-gray-400 rounded-sm ">
-            <input type="radio" name="my-accordion-2" />
-            <div class="collapse-title text-xl font-medium">
-              How can I tell if my helmet is old and I need a
-              new one?
-            </div>
-            <div class="collapse-content">
-              <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of
-              “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</p>
-            </div>
-          </div>
-          <div class="collapse collapse-arrow mb-5 border border-gray-400 rounded-sm ">
-            <input type="radio" name="my-accordion-2" />
-            <div class="collapse-title text-xl font-medium">
-              What rules should I follow when riding my bike?
-            </div>
-            <div class="collapse-content">
-              <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of
-              “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider.</p>
-            </div>
-          </div>
           </div>
         </div>
       </div>
     </section>
   </main>
   <!-- footer -->
-<section>
-  <footer class="footer p-10 bg-neutral text-neutral-content mt-10 w-full ">
-  
-    <div class="md:container md:mx-auto sm:flex justify-around items-center ">
-      <div class="">
-      
-        <p>Bike Zone Industries Ltd.<br />Providing reliable tech since 1992</p>
-      </div>
-      <div>
-        <span class="footer-title">Get the app</span>
-        <div class="grid grid-row gap-4">
-          <a><img class="w-32" src="images/others/android.png" alt=""></a>
-          <a><img class="w-32" src="images/others/ios.png" alt=""></a>
-      
+  <section>
+    <footer class="footer p-10 bg-neutral text-neutral-content mt-10 w-full ">
+
+      <div class="md:container md:mx-auto sm:flex justify-around items-center ">
+        <div class="">
+
+          <p>Bike Zone Industries Ltd.<br />Providing reliable tech since 1992</p>
+        </div>
+        <div>
+          <span class="footer-title">Get the app</span>
+          <div class="grid grid-row gap-4">
+            <a><img class="w-32" src="images/others/android.png" alt=""></a>
+            <a><img class="w-32" src="images/others/ios.png" alt=""></a>
+
+          </div>
         </div>
       </div>
-    </div>
-  
-  </footer>
-</section>
+
+    </footer>
+  </section>
 </body>
 
 </html>
